--- a/entervaluewidget.ui
+++ b/entervaluewidget.ui
@@ -13,6 +13,9 @@
     <height>108</height>
    </rect>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::WheelFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>Отправить в МК</string>
   </property>
@@ -33,7 +36,7 @@
    <item row="0" column="0">
     <widget class="QSpinBox" name="spinBox">
      <property name="focusPolicy">
-      <enum>Qt::TabFocus</enum>
+      <enum>Qt::WheelFocus</enum>
      </property>
      <property name="maximum">
       <number>255</number>
