--- a/styleGreenButtons.css
+++ b/styleGreenButtons.css
@@ -3,8 +3,8 @@
 */
 
 QPushButton{
-    background: green;
-    color: white;
+    background: #37C700;
+    color: #003AA3;
     border-radius:4px;
     border:1px solid #5CA4FF;
     min-height:25px;
