Изменена кнопка получения сигнала. И вместе с ней весь механизм Ушли баги с дубликейтами и ошибками. Трейсер теперь удаляется и создается заново на новом графике, чтобы не было ошибок при удаленнии графика.
Другие маленькие баги.

--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ QPushButton:disabled{
     background: #E0E0E0;
     color: #969696;
 }
+QPushButton:checked{
+    background: #FFE73D;
+    color: #003AA3;
+}
 QCheckBox{
     font-family: SFUIText-Bold;
     font-size:14px;
