--- a/res.qrc
+++ b/res.qrc
@@ -150,6 +150,8 @@
         <file>Resources/unnamed.jpg</file>
         <file>Resources/plus.svg</file>
         <file>Resources/minus.svg</file>
+        <file>Resources/open.png</file>
+        <file>Resources/floppy-disk.png</file>
     </qresource>
     <qresource prefix="/qss">
         <file>style.css</file>
