--- a/transport/waitingdialog.ui
+++ b/transport/waitingdialog.ui
@@ -19,9 +19,6 @@
      <property name="text">
       <string/>
      </property>
-     <property name="pixmap">
-      <pixmap resource="../res.qrc">:/1/Resources/waiting.gif</pixmap>
-     </property>
      <property name="scaledContents">
       <bool>false</bool>
      </property>
@@ -39,8 +36,6 @@
    </item>
   </layout>
  </widget>
- <resources>
-  <include location="../res.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
