--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ QGroupBox{
     border: 1px solid #5CA4FF;
     font: bold 14px;
     font-family: SFUIText-Bold;
-    margin-bottom: 2ex;
+    margin-bottom: 2px;
     padding-top: 15px;
 }
 QGroupBox::title {
